# AetherTrade

./: LICENSE  PROJECT_NOTES.md  README.md
backend/predictions/: Dockerfile  main.py  predictor.py  pyproject.toml
backend/shared/: cache.py  env.py  symbols.py
backend/simulator/: Dockerfile  main.py  pyproject.toml
backend/trainer/: Dockerfile  env.py  main.py  pyproject.toml  train.py
docker/: docker-compose.yml
docs/: README.md  tickers
frontend/dashboard/: Dockerfile  package-lock.json  package.json
frontend/dashboard/src/: App.vue
frontend/dashboard/src/components/: AllModelsRecsTab.vue  NavBar.vue  RecTab.vue  SimulatorTab.vue  TrainingTab.vue
frontend/dashboard/src/data/: symbols.json
