[tool.poetry]
name = "simulator"
version = "0.1.0"
description = "AetherTrade Simulator module"
authors = ["Brogan O'Connor <brogan.oc13@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.102.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
redis = "^5.3.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
torch = { version = "^2.9.0", extras = ["cpu"] }
stable-baselines3 = "^2.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
