[tool.poetry]
name = "trainer"
version = "0.1.0"
description = "AetherTrade Trainer module"
authors = ["Brogan O'Connor <brogan.oc13@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.102.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
redis = "^5.3.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
gymnasium = "^1.2.1"
stable-baselines3 = "^2.3.0"
yfinance = "^0.2.28"
ta = "^0.11.0"

torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl", markers = "sys_platform == 'linux'" }
]

torchaudio = [
    { url = "https://download.pytorch.org/whl/cpu/torchaudio-2.3.1%2Bcpu-cp312-cp312-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cpu/torchaudio-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl", markers = "sys_platform == 'linux'" }
]

torchvision = [
    { url = "https://download.pytorch.org/whl/cpu/torchvision-0.18.1%2Bcpu-cp312-cp312-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cpu/torchvision-0.18.1%2Bcpu-cp312-cp312-linux_x86_64.whl", markers = "sys_platform == 'linux'" }
]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
